# Dogwater

./: .gitignore  CMakeLists.txt
src/: Connection.cpp  Connection.h  DogwaterPlugin.cpp  DogwaterPlugin.h  DogwaterServer.cpp  DogwaterServer.h  PluginManager.cpp  PluginManager.h  enums.h  main.cpp
src/util/: MessageReader.cpp  MessageReader.h  MessageWriter.cpp  MessageWriter.h  bswap.h
